Fixed mobile overflow issues

--- a/css/clock.css
+++ b/css/clock.css
@@ -1,23 +1,36 @@
 @import "./colorsheet.css";
 
-h1,p {
+h1, p {
     height: auto;
     width: 100%;
-    font-size: clamp(2rem, 2.9vw, 3rem);
+    font-size: 3rem;
     box-sizing: border-box;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 20px;
     margin-inline: auto;
 }
 
 section {
     height: fit-content;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 20px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   section {
-    grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
+      padding: 1rem;
+      margin: 1rem;
+  }
+
+  h1, p {
+      padding: 0.5rem;
+      margin: 0.5rem;
+      font-size: 1rem;
+      /* width: max-content; */
+      margin-inline: auto;
   }
 }
 
@@ -45,7 +58,7 @@ progress[value]::-webkit-progress-value {
 }
 
 .progress-container {
-    border-radius: 40px;
+    border-radius: 20px;
     height: 100%;
 }
 
