--- a/css/projects.css
+++ b/css/projects.css
@@ -12,14 +12,14 @@
 }
 
 .videos {
-    margin: 2vw;
-    padding: 2vw;
+    margin: 2rem;
+    padding: 2rem;
     border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     max-width: 1500px;
     height: fit-content;
-    gap: 20px;
+    gap: 2rem;
     margin-inline: auto;
 }
 
